--- a/index.html
+++ b/index.html
@@ -222,16 +222,11 @@
 
     /* FONTS */
 
-    /* Titles */
-    h1, h2, h3, .hero-text h1, .form-title {
-      font-family: 'Playfair Display', serif;
-    }
-
     /* Body text */
     body, p, label, input, textarea, /*button,*/ .collection-description, .caption {
       font-family: 'Cormorant Garamond', serif;
     }
-
+      /* Titles */
     h1 {
       font-size: 2.7rem; /* up from 2.5 */
     }
@@ -244,11 +239,16 @@
       font-size: 1.5rem;
     }
 
+    h1, h2, h3, .hero-text h1, .form-title {
+      font-family: 'Playfair Display', serif;
+    }
+
     label,
     input,
     textarea,
     button {
       font-size: 1rem; /* up from 0.9 or 0.95 */
+      font-family: 'Helvetica Neue', sans-serif;
     }
 
     .collections-section {
@@ -459,7 +459,7 @@
 
     .modal-overlay-text {
       position: absolute;
-      top: 50%;
+      top: 2rem;
       left: 50%;
       transform: translate(-50%, -50%);
       text-align: center;
@@ -541,6 +541,7 @@
       top: 0;
       left: 0;
       z-index: 1;
+      animation: shake 5s infinite ease-in-out;
     }
 
     .hero-text {
@@ -587,6 +588,20 @@
         flex-direction: column;
         align-items: center;
       }
+
+    @keyframes shake {
+      0%   { transform: translate( 0px,  0px) rotate(0deg); }
+      10%  { transform: translate(-2px, -1px) rotate(-1deg); }
+      20%  { transform: translate(-1px,  2px) rotate(1deg); }
+      30%  { transform: translate( 2px,  1px) rotate(0deg); }
+      40%  { transform: translate( 1px, -2px) rotate(-1deg); }
+      50%  { transform: translate(-1px,  1px) rotate(1deg); }
+      60%  { transform: translate(-2px,  0px) rotate(0deg); }
+      70%  { transform: translate( 2px, -1px) rotate(-1deg); }
+      80%  { transform: translate(-1px,  2px) rotate(1deg); }
+      90%  { transform: translate( 1px, -1px) rotate(0deg); }
+      100% { transform: translate( 0px,  0px) rotate(0deg); }
+    }
 
       .modal-form-container {
         width: 90%;
