--- a/index.html
+++ b/index.html
@@ -488,8 +488,8 @@
 
     #modal-close {
       position: absolute;
-      top: 15px;
-      right: 10px;
+      top: -15px;
+      right: -10px;
       font-size: 2rem;
       color: white;
       background: transparent;
@@ -497,6 +497,19 @@
       cursor: pointer;
       z-index: 11;
     }
+
+    /* Slightly shift X inward only on larger screens */
+    @media (min-width: 768px) {
+      #modal-close {
+        top: -25px;
+        right: -12%;
+      }
+    }
+
+    #modal-close:hover {
+      color: #ccc;
+    }
+
 
     .hero-header {
       position: relative;
@@ -513,7 +526,8 @@
       top: 0;
       left: 0;
       z-index: 1;
-      animation: shake 5s infinite ease-in-out;
+      animation: shake 9s linear infinite;
+      /*transform-origin: center center;*/
     }
 
     .hero-text {
@@ -543,17 +557,6 @@
     }
 
 
-    /* Slightly shift X inward only on larger screens */
-    @media (min-width: 768px) {
-      #modal-close {
-        top: 25px;
-        right: 12%;
-      }
-    }
-
-    #modal-close:hover {
-      color: #ccc;
-    }
 
     @media (max-width: 768px) {
       #modal-content {
@@ -567,19 +570,46 @@
     }
 
     @keyframes shake {
-      0%   { transform: translate( 0px,  0px) rotate(0deg); }
-      10%  { transform: translate(-2px, -1px) rotate(-1deg); }
-      20%  { transform: translate(-1px,  2px) rotate(1deg); }
-      30%  { transform: translate( 2px,  1px) rotate(0deg); }
-      40%  { transform: translate( 1px, -2px) rotate(-1deg); }
-      50%  { transform: translate(-1px,  1px) rotate(1deg); }
-      60%  { transform: translate(-2px,  0px) rotate(0deg); }
-      70%  { transform: translate( 2px, -1px) rotate(-1deg); }
-      80%  { transform: translate(-1px,  2px) rotate(1deg); }
-      90%  { transform: translate( 1px, -1px) rotate(0deg); }
-      100% { transform: translate( 0px,  0px) rotate(0deg); }
-    }
-
+      0%, 100% {
+        transform: translate(0px, 3px) rotate(0deg);
+      }
+      8% {
+        transform: translate(2px, 5px) rotate(0deg);
+      }
+      16% {
+        transform: translate(4px, 6px) rotate(0deg);
+      }
+      24% {
+        transform: translate(4px, 6px) rotate(1deg);
+      }
+      32% {
+        transform: translate(3px, 4px) rotate(0deg);
+      }
+      40% {
+        transform: translate(1px, 2px) rotate(0deg);
+      }
+      48% {
+        transform: translate(0px, 0px) rotate(0deg);
+      }
+      56% {
+        transform: translate(-2px, 0px) rotate(0deg);
+      }
+      64% {
+        transform: translate(-4px, -2px) rotate(0deg);
+      }
+      72% {
+        transform: translate(-5px, -4px) rotate(0deg);
+      }
+      80% {
+        transform: translate(-5px, -4px) rotate(-1deg);
+      }
+      88% {
+        transform: translate(-3px, -2px) rotate(0deg);
+      }
+      96% {
+        transform: translate(-2px, -1px) rotate(0deg);
+      }
+}
     /* FONTS */
 
     /* Body text */
