--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 
     #modal-close {
       position: absolute;
-      top: -15px;
+      top: -25px;
       right: -10px;
       font-size: 2rem;
       color: white;
@@ -501,8 +501,8 @@
     /* Slightly shift X inward only on larger screens */
     @media (min-width: 768px) {
       #modal-close {
-        top: -25px;
-        right: -12%;
+        top: -35px;
+        right: -10%;
       }
     }
 
@@ -571,43 +571,43 @@
 
     @keyframes shake {
       0%, 100% {
-        transform: translate(0px, 3px) rotate(0deg);
-      }
-      8% {
-        transform: translate(2px, 5px) rotate(0deg);
-      }
-      16% {
-        transform: translate(4px, 6px) rotate(0deg);
-      }
-      24% {
-        transform: translate(4px, 6px) rotate(1deg);
-      }
-      32% {
-        transform: translate(3px, 4px) rotate(0deg);
-      }
-      40% {
-        transform: translate(1px, 2px) rotate(0deg);
-      }
-      48% {
         transform: translate(0px, 0px) rotate(0deg);
       }
+      8% {
+        transform: translate(1px, 2px) rotate(0deg);
+      }
+      16% {
+        transform: translate(3px, 3px) rotate(0deg);
+      }
+      24% {
+        transform: translate(4px, 4px) rotate(0.3deg);
+      }
+      32% {
+        transform: translate(4px, 4x) rotate(0deg);
+      }
+      40% {
+        transform: translate(3px, 2px) rotate(0deg);
+      }
+      48% {
+        transform: translate(1px, 1px) rotate(0deg);
+      }
       56% {
-        transform: translate(-2px, 0px) rotate(0deg);
+        transform: translate(-1px, -1px) rotate(0deg);
       }
       64% {
-        transform: translate(-4px, -2px) rotate(0deg);
-      }
-      72% {
-        transform: translate(-5px, -4px) rotate(0deg);
-      }
-      80% {
-        transform: translate(-5px, -4px) rotate(-1deg);
-      }
-      88% {
         transform: translate(-3px, -2px) rotate(0deg);
       }
-      96% {
+      72% {
+        transform: translate(-4px, -3px) rotate(0deg);
+      }
+      80% {
+        transform: translate(-4px, -3px) rotate(-0.3deg);
+      }
+      88% {
         transform: translate(-2px, -1px) rotate(0deg);
+      }
+      96% {
+        transform: translate(-1px, 0px) rotate(0deg);
       }
 }
     /* FONTS */
