--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
     <a href="mailto:your.email@example.com">your.email@example.com</a>
   </section>
 
+  <!-- Interactive Whiteboard. For fun. Delete if not wanted -->
+  <section id="whiteboard-section" class="right-padded">
+    <h2>Sketchpad</h2>
+    <canvas id="whiteboard" width="800" height="400" style="border:2px solid #444; touch-action: none;"></canvas>
+    <button id="clear-board">Clear</button>
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
