--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
   <div id="modal" onclick="closeModal(event)">
     <div id="modal-content">
       <button id="modal-close" onclick="closeModal(event)">×</button>
+
+      <!-- ← PREV / NEXT BUTTONS in the modal -->
+      <button id="modal-prev" class="modal-nav" onclick="modalPrev()">‹</button>
+      <button id="modal-next" class="modal-nav" onclick="modalNext()">›</button>
+
       <div class="modal-image-wrapper">
         <img id="modal-img" src="" alt="Zoomed Art" />
         <div class="modal-overlay-text">
@@ -82,6 +87,7 @@
           <div id="modal-art-status"></div>
         </div>
       </div>
+
       <div class="modal-form-container">
         <h3 class="form-title">Inquire About This Piece</h3>
         <!-- Using my email, replace with yvon. Can also make it a string to keep email hidden -->
