--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
         </div>
       </div>
 
+      <div id="modal-art-details" class="modal-details"></div>
+      
       <div class="modal-form-container">
         <h3 class="form-title">Inquire About This Piece</h3>
         <!-- Using my email, replace with yvon. Can also make it a string to keep email hidden -->
