--- a/index.html
+++ b/index.html
@@ -74,22 +74,16 @@
   <!-- Image Zoom-In -->
   <div id="modal" onclick="closeModal(event)">
     <div id="modal-content">
-      <button id="modal-close" onclick="closeModal(event)">×</button>
-
-      <!-- ← PREV / NEXT BUTTONS in the modal -->
-      <button id="modal-prev" class="modal-nav" onclick="modalPrev()">‹</button>
-      <button id="modal-next" class="modal-nav" onclick="modalNext()">›</button>
+      <button id="modal-close">×</button>
 
       <div class="modal-image-wrapper">
+        <button id="modal-prev" class="modal-nav">‹</button>
         <img id="modal-img" src="" alt="Zoomed Art" />
-        <div class="modal-overlay-text">
-          <div id="modal-art-title"></div>
-          <div id="modal-art-status"></div>
-        </div>
+        <button id="modal-next" class="modal-nav">›</button>
+        <div class="modal-overlay-text">…</div>
+        <div id="modal-art-details" class="modal-details"></div>
       </div>
 
-      <div id="modal-art-details" class="modal-details"></div>
-      
       <div class="modal-form-container">
         <h3 class="form-title">Inquire About This Piece</h3>
         <!-- Using my email, replace with yvon. Can also make it a string to keep email hidden -->
