--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <!-- List of Collections. Added via JSON -->
     <h2>Collections</h2>
     <div class="collections-bar" id="collections-bar">
+      <div class="collection-tab active" data-collection="charcoal">Charcoal</div>
       <div class="collection-tab active" data-collection="portraits">Portraits</div>
       <div class="collection-tab" data-collection="sketches">Sketches</div>
       <div class="collection-tab" data-collection="artworks">Artworks</div>
