--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <!-- Banner with Name and Image -->
   <header class="hero-header">
     
-    <img src="images/trike.jpg" alt="Header background" class="hero-bg" />
+    <img src="images/skull-cover.jpg" alt="Header background" class="hero-bg" />
     <div class="hero-text">
       <h1>Yvon Lu</h1>
       <p>Charcoal & Graphite Artist</p>
