--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Your Art Portfolio</title>
-  <link rel="stylesheet" href="styleB.css" />
+  <link rel="stylesheet" href="style.css" />
    <!-- Icon -->
   <link rel="icon" type="image/png" href="images/temp_icon.png" />
   <link rel="apple-touch-icon" href="images/temp_icon.png">
