--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </header>
 
    <!-- Gallery on one-pager -->
-  <section id="gallery" class="collections-section">
+  <section id="gallery" class="collections-section reveal">
 
     <!-- List of Collections. Added via JSON -->
     <h2>Collections</h2>
@@ -133,29 +133,29 @@
     </div>
   </section> -->
 
-  <section id="about" class="right-padded">
+  <section id="about" class="right-padded reveal">
     <h2>About</h2>
     <p>Welcome to Yvon's world of charcoal and graphite. This section will include a full bio, artistic influences, and creative process.</p>
   </section>
 
-  <section id="comissions" class="right-padded">
+  <section id="comissions" class="right-padded reveal">
     <h2>Comissions</h2>
     <p>Welcome to Yvon's world of charcoal and graphite. This section will include a full bio, artistic influences, and creative process.</p>
   </section>
 
-  <section id="prints" class="right-padded">
+  <section id="prints" class="right-padded reveal">
     <h2>Prints</h2>
     <p>Welcome to Yvon's world of charcoal and graphite. This section will include a full bio, artistic influences, and creative process.</p>
   </section>
 
-  <section id="contact" class="right-padded">
+  <section id="contact" class="right-padded reveal">
     <h2>Contact</h2>
     <p>You can reach out via email for inquiries, commissions, or collaborations. Stay tuned! Socials:</p>
     <a href="mailto:your.email@example.com">your.email@example.com</a>
   </section>
 
   <!-- Interactive Whiteboard. For fun. Delete if not wanted -->
-  <section id="whiteboard-section" class="right-padded">
+  <section id="whiteboard-section" class="right-padded reveal">
     <h2>Sketchpad</h2>
     <canvas id="whiteboard" width="800" height="400" style="border:2px solid #444; touch-action: none;"></canvas>
     <button id="clear-board">Clear</button>
